@@ -1,3 +1,8 @@
+2003-06-26  Dafydd Harries  <daf@parnassus.ath.cx>
+
+	* gconf/gonftool.c (main): Tidied up "--foo option must be used by
+	itself" messages.
+
 2003-06-26  Ross Golder  <ross@golder.org>
 
 	* gconf/gconftool.c (do_dissociate_schema): Fixed a misleading
